fix file upload size on mobile

--- a/ui/apps/io.ox/calendar/edit/style.less
+++ b/ui/apps/io.ox/calendar/edit/style.less
@@ -360,6 +360,10 @@
             min-height: 0px;
         }
 
+        .fileupload .uneditable-input {
+            width: 185px;
+        }
+
     }
 
 }
